--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
   },
   "dependencies": {
     "@nestjs/common": "11.1.2",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.2",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.1.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "helmet": "^8.1.0",
+    "nestjs-throttler": "^0.3.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
